fix spacing at footer

--- a/src/components/diem-tin-dung/Section1/style.module.css
+++ b/src/components/diem-tin-dung/Section1/style.module.css
@@ -12,7 +12,6 @@
     top: 124px;
     left: 50%;
     transform: translateX(-50%);
-    height: 100%;
 }
 
 .heading {
